# back-end-core

./: Cargo.toml
database/: Cargo.toml
database/src/: execute.rs
src/: main.rs  schema.rs  server.rs
src/database/: execute.rs  migrate.rs  ransom_notes_dao.rs
src/database/sql/: insert_person.sql  person.sql  select_person.sql
src/database/sql/migrate/: 1.sql
src/models/: user_model.rs
src/public/: index.html
src/schema/: query.rs
src/schema/query/: ransom_notes.rs
src/sql/users/: insert_user.sql  select_user.sql
src/static/: index.html
