[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
warp = "0.3"
http = "0.2"
async-graphql = "3.0.34"
async-graphql-warp = "3.0.34"
rawsql = "0.1.1"
postgres = "0.19.4"
hmac = "0.12"